Update lane detection functions

--- a/project.ipynb
+++ b/project.ipynb
@@ -360,7 +360,40 @@
     "    \n",
     "    return left_fit, right_fit, left_lane_inds, right_lane_inds, nonzeroX, nonzeroY\n",
     "    \n",
-    "    "
+    "\n",
+    "def get_lines(left_fit, right_fit, binary_warped):\n",
+    "    \n",
+    "    # Generate x and y values for plotting\n",
+    "    ploty = np.linspace(0, warped.shape[0]-1, img.shape[0])\n",
+    "    left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "    right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "    return left_fitx, right_fitx, ploty\n",
+    "\n",
+    "\n",
+    "def extend_lines(left_fit, right_fit, binary_warped):\n",
+    "    \n",
+    "    margin = 100\n",
+    "    nonzero = binary_warped.nonzero()\n",
+    "    nonzeroY = np.array(nonzero[0])\n",
+    "    nonzeroX = np.array(nonzero[1])\n",
+    "    \n",
+    "    left_lane_inds = ((nonzeroX > (left_fit[0]*(nonzeroY**2) + left_fit[1]*nonzeroY + left_fit[2] - margin)) \n",
+    "                      & (nonzeroX < (left_fit[0]*(nonzeroY**2) + left_fit[1]*nonzeroY + left_fit[2] + margin))) \n",
+    "    right_lane_inds = ((nonzeroX > (right_fit[0]*(nonzeroY**2) + right_fit[1]*nonzeroY + right_fit[2] - margin)) \n",
+    "                       & (nonzeroX < (right_fit[0]*(nonzeroY**2) + right_fit[1]*nonzeroY + right_fit[2] + margin)))      \n",
+    "    \n",
+    "    leftX = nonzeroX[left_lane_inds]\n",
+    "    leftY = nonzeroY[left_lane_inds] \n",
+    "    rightX = nonzeroX[right_lane_inds]\n",
+    "    rightY = nonzeroY[right_lane_inds]\n",
+    "    left_fit, right_fit = (None, None)\n",
+    "    \n",
+    "    # Fit a second order polynomial to each\n",
+    "    if len(leftX) != 0:\n",
+    "        left_fit = np.polyfit(leftY, leftX, 2)\n",
+    "    if len(rightX) != 0:\n",
+    "        right_fit = np.polyfit(rightY, rightX, 2)\n",
+    "    return left_fit, right_fit"
    ]
   }
  ],
